Archive2/3a/4c5e5708084e5d/output
main.cpp:6:5: error: static_assert failed "unexpected number of arguments"
    static_assert(sizeof...(Args) == 7, "unexpected number of arguments");
    ^             ~~~~~~~~~~~~~~~~~~~~
main.cpp:14:5: note: in instantiation of function template specialization 'foo<int, int, int, int, int, int, int, int>' requested here
    foo(1,2,3,4,5,6,7,8); // oops
    ^
1 error generated.
